Enable svc_fog instead of client side fog rendering

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,7 +121,7 @@ set(GAME_HEADERS
 	tables/levelfields.h
 )
 
-add_definitions(-DDISABLE_FOG)
+# add_definitions(-DDISABLE_FOG)
 add_library(vrgamex86 MODULE ${GAME_SOURCES} ${GAME_HEADERS})
 set_target_properties(vrgamex86 PROPERTIES PREFIX "")
 target_compile_options(vrgamex86 PRIVATE -fvisibility=hidden)
